Added new components Tag, Select, Search, Popup, Pagination, Input, Header, ClearButton, and CardList. Switched from React Query for Restful queries to graphql/Apollo Client for better filtering. Updated the design and layout. Added separate queries for gathering card-specific data

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "SpaceX Launch API Search",
-  "name": "SpaceX Launch API Search",
+  "short_name": "aldrin",
+  "name": "aldrin",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
