--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "spacex",
+  "name": "aldrin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.14",
+    "@mui/material": "^5.10.14",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,13 +15,14 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
-    "axios": "^1.1.3",
+    "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.2",
+    "react-onclickoutside": "^6.12.2",
+    "react-outside-click-handler": "^1.3.0",
+    "react-remove-scroll-bar": "^2.3.4",
     "react-scripts": "5.0.1",
-    "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,8 +52,14 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@types/react-outside-click-handler": "^1.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
     "autoprefixer": "^10.4.13",
     "concurrently": "^7.5.0",
+    "eslint": "^8.27.0",
+    "eslint-plugin-react": "^7.31.10",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
   }
