--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-onclickoutside": "^6.12.2",
     "react-outside-click-handler": "^1.3.0",
     "react-remove-scroll-bar": "^2.3.4",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4"
   },
