--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "buffer": "^6.0.3",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
     "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
@@ -52,6 +54,7 @@
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@types/react-html-parser": "^2.0.2",
     "@types/react-outside-click-handler": "^1.3.1",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
