--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-html-parser": "^2.0.2",
     "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
@@ -55,6 +56,7 @@
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
     "@types/react-helmet": "^6.1.6",
+    "@types/react-html-parser": "^2.0.2",
     "@types/react-outside-click-handler": "^1.3.1",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
